# withings-mcp

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: check-no-data.sh
src/: main.py
src/withings_mcp/: api.py  auth.py  config.py  db.py  helpers.py  mcp_instance.py
src/withings_mcp/tools/: activity_tools.py  analysis_tools.py  body_tools.py  device_tools.py  heart_tools.py  sleep_tools.py  sync_tools.py
tests/: fixtures.py  test_api.py  test_db.py  test_helpers.py  test_trends.py
